# delayed_emails

./: Dockerfile  README.md  example.env  pyproject.toml
delayed_email/: .gitignore  containers.py  settings.py
delayed_email/api/: __main__.py  health.py
delayed_email/api/v1/: email.py
delayed_email/db/: base.py
delayed_email/services/: email_receiver.py  email_sender.py  selector.py
delayed_email/worker/: consumer.py  rabbitmq.py
tests/: docker-compose.yaml
